TestRepo2/src/objects/Territory__c.object
<CustomObject>
    <description>&quot;Rep&quot;, who is at the most granular level of role hierarchy, is always the Owner of a given Territory record.</description>
    <fields>
        <fullName>Broker_SAM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Broker SAM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Territories3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Territories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Territories1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Migration_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Migration ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>New_Org_ID__c</fullName>
        <label>New Org ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Prod_ID__c</fullName>
        <label>New Prod ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Diageo Goal Creator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Territories2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WY</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Division__c</fullName>
        <label>Sub-Division</label>
        <picklist>
            <controllingField>State__c</controllingField>
            <picklistValues>
                <fullName>East Control State</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West Control State</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Territory</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>State__c</columns>
        <columns>Sub_Division__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Manager__c</columns>
        <columns>Director__c</columns>
        <columns>Broker_SAM__c</columns>
        <columns>SAM__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Territories (Control &amp; Franchise)</label>
    </listViews>
    <listViews>
        <fullName>Control_All_States</fullName>
        <columns>NAME</columns>
        <columns>State__c</columns>
        <columns>Sub_Division__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Manager__c</columns>
        <columns>Director__c</columns>
        <columns>Broker_SAM__c</columns>
        <columns>SAM__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>State__c</field>
            <operation>equals</operation>
            <value>AL,IA,ID,ME,MI,MS,MT,NC,NH,OH,OR,PA,UT,VA,VT,WV,WY</value>
        </filters>
        <label>Control - All States</label>
    </listViews>
    <listViews>
        <fullName>Franchise_All_States</fullName>
        <columns>NAME</columns>
        <columns>State__c</columns>
        <columns>Sub_Division__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Manager__c</columns>
        <columns>Director__c</columns>
        <columns>Broker_SAM__c</columns>
        <columns>SAM__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>State__c</field>
            <operation>equals</operation>
            <value>CT,NJ</value>
        </filters>
        <label>Franchise - All States</label>
    </listViews>
    <listViews>
        <fullName>Franchise_CT_Territory</fullName>
        <columns>State__c</columns>
        <columns>NAME</columns>
        <columns>Sub_Division__c</columns>
        <columns>SAM__c</columns>
        <columns>Broker_SAM__c</columns>
        <columns>Director__c</columns>
        <columns>Manager__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>State__c</field>
            <operation>equals</operation>
            <value>CT</value>
        </filters>
        <label>Franchise - CT Territory</label>
    </listViews>
    <listViews>
        <fullName>Franchise_NJ_Territory</fullName>
        <columns>State__c</columns>
        <columns>NAME</columns>
        <columns>Sub_Division__c</columns>
        <columns>SAM__c</columns>
        <columns>Broker_SAM__c</columns>
        <columns>Director__c</columns>
        <columns>Manager__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>State__c</field>
            <operation>equals</operation>
            <value>NJ</value>
        </filters>
        <label>Franchise - NJ Territory</label>
    </listViews>
    <listViews>
        <fullName>IA_Territory</fullName>
        <columns>State__c</columns>
        <columns>NAME</columns>
        <columns>Sub_Division__c</columns>
        <columns>SAM__c</columns>
        <columns>Broker_SAM__c</columns>
        <columns>Director__c</columns>
        <columns>Manager__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>State__c</field>
            <operation>equals</operation>
            <value>IA</value>
        </filters>
        <label>Control - IA Territory</label>
    </listViews>
    <listViews>
        <fullName>ID_Territory</fullName>
        <columns>State__c</columns>
        <columns>NAME</columns>
        <columns>Sub_Division__c</columns>
        <columns>SAM__c</columns>
        <columns>Broker_SAM__c</columns>
        <columns>Director__c</columns>
        <columns>Manager__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>State__c</field>
            <operation>equals</operation>
            <value>ID</value>
        </filters>
        <label>Control - ID Territory</label>
    </listViews>
    <listViews>
        <fullName>ME_Territory</fullName>
        <columns>State__c</columns>
        <columns>NAME</columns>
        <columns>Sub_Division__c</columns>
        <columns>SAM__c</columns>
        <columns>Broker_SAM__c</columns>
        <columns>Director__c</columns>
        <columns>Manager__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>State__c</field>
            <operation>equals</operation>
            <value>ME</value>
        </filters>
        <label>Control - ME Territory</label>
    </listViews>
    <listViews>
        <fullName>MI_Territory</fullName>
        <columns>State__c</columns>
        <columns>NAME</columns>
        <columns>Sub_Division__c</columns>
        <columns>SAM__c</columns>
        <columns>Broker_SAM__c</columns>
        <columns>Director__c</columns>
        <columns>Manager__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>State__c</field>
            <operation>equals</operation>
            <value>MI</value>
        </filters>
        <label>Control - MI Territory</label>
    </listViews>
    <listViews>
        <fullName>MS_Territory</fullName>
        <columns>State__c</columns>
        <columns>NAME</columns>
        <columns>Manager__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Sub_Division__c</columns>
        <columns>SAM__c</columns>
        <columns>Broker_SAM__c</columns>
        <columns>Director__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>State__c</field>
            <operation>equals</operation>
            <value>MS</value>
        </filters>
        <label>Control - MS Territory</label>
    </listViews>
    <listViews>
        <fullName>MT_Territory</fullName>
        <columns>State__c</columns>
        <columns>NAME</columns>
        <columns>Sub_Division__c</columns>
        <columns>SAM__c</columns>
        <columns>Broker_SAM__c</columns>
        <columns>Director__c</columns>
        <columns>Manager__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>State__c</field>
            <operation>equals</operation>
            <value>MT</value>
        </filters>
        <label>Control - MT Territory</label>
    </listViews>
    <listViews>
        <fullName>NC_Territory</fullName>
        <columns>State__c</columns>
        <columns>NAME</columns>
        <columns>Sub_Division__c</columns>
        <columns>SAM__c</columns>
        <columns>Broker_SAM__c</columns>
        <columns>Director__c</columns>
        <columns>Manager__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>State__c</field>
            <operation>equals</operation>
            <value>NC</value>
        </filters>
        <label>Control - NC Territory</label>
    </listViews>
    <listViews>
        <fullName>NH_Territory</fullName>
        <columns>State__c</columns>
        <columns>NAME</columns>
        <columns>Sub_Division__c</columns>
        <columns>SAM__c</columns>
        <columns>Broker_SAM__c</columns>
        <columns>Director__c</columns>
        <columns>Manager__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>State__c</field>
            <operation>equals</operation>
            <value>NH</value>
        </filters>
        <label>Control - NH Territory</label>
    </listViews>
    <listViews>
        <fullName>OH_Territory</fullName>
        <columns>State__c</columns>
        <columns>NAME</columns>
        <columns>Sub_Division__c</columns>
        <columns>SAM__c</columns>
        <columns>Broker_SAM__c</columns>
        <columns>Director__c</columns>
        <columns>Manager__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>State__c</field>
            <operation>equals</operation>
            <value>OH</value>
        </filters>
        <label>Control - OH Territory</label>
    </listViews>
    <listViews>
        <fullName>OR_Territory</fullName>
        <columns>State__c</columns>
        <columns>NAME</columns>
        <columns>Sub_Division__c</columns>
        <columns>SAM__c</columns>
        <columns>Broker_SAM__c</columns>
        <columns>Director__c</columns>
        <columns>Manager__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>State__c</field>
            <operation>equals</operation>
            <value>OR</value>
        </filters>
        <label>Control - OR Territory</label>
    </listViews>
    <nameField>
        <label>Territory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Territories</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>